@@ -1038,11 +1038,6 @@ ags_dssi_bridge_map_recall(AgsMachine *machine)
   dssi_bridge = (AgsDssiBridge *) machine;
 
   audio = machine->audio;
-  g_object_get(audio,
-	       "play", &start_play,
-	       "recall", &start_recall,
-	       NULL);
-  
   /* ags-delay */
   ags_recall_factory_create(audio,
 			    NULL, NULL,
@@ -1054,6 +1049,10 @@ ags_dssi_bridge_map_recall(AgsMachine *machine)
 			     AGS_RECALL_FACTORY_PLAY),
 			    0);
 
+  g_object_get(audio,
+	       "play", &start_play,
+	       NULL);
+  
   play = ags_recall_find_type(start_play,
 			      AGS_TYPE_DELAY_AUDIO_RUN);
 
@@ -1063,6 +1062,8 @@ ags_dssi_bridge_map_recall(AgsMachine *machine)
   }else{
     play_delay_audio_run = NULL;
   }
+
+  g_list_free(start_play);
   
   /* ags-count-beats */
   ags_recall_factory_create(audio,
@@ -1075,6 +1076,10 @@ ags_dssi_bridge_map_recall(AgsMachine *machine)
 			     AGS_RECALL_FACTORY_PLAY),
 			    0);
 
+  g_object_get(audio,
+	       "play", &start_play,
+	       NULL);
+  
   play = ags_recall_find_type(start_play,
 			      AGS_TYPE_COUNT_BEATS_AUDIO_RUN);
 
@@ -1092,6 +1097,8 @@ ags_dssi_bridge_map_recall(AgsMachine *machine)
     play_count_beats_audio_run = NULL;
   }
 
+  g_list_free(start_play);
+  
   /* ags-route-dssi */
   ags_recall_factory_create(audio,
 			    NULL, NULL,
@@ -1103,6 +1110,10 @@ ags_dssi_bridge_map_recall(AgsMachine *machine)
 			     AGS_RECALL_FACTORY_RECALL),
 			    0);
 
+  g_object_get(audio,
+	       "recall", &start_recall,
+	       NULL);
+  
   recall = ags_recall_find_type(start_recall,
 				AGS_TYPE_ROUTE_DSSI_AUDIO_RUN);
 
@@ -1122,6 +1133,8 @@ ags_dssi_bridge_map_recall(AgsMachine *machine)
     recall_route_dssi_audio_run = NULL;
   }
 
+  g_list_free(start_recall);
+  
   /* ags-record-midi */
   ags_recall_factory_create(audio,
 			    NULL, NULL,
@@ -1133,8 +1146,12 @@ ags_dssi_bridge_map_recall(AgsMachine *machine)
 			     AGS_RECALL_FACTORY_RECALL),
 			    0);
 
+  g_object_get(audio,
+	       "recall", &start_recall,
+	       NULL);
+  
   recall = ags_recall_find_type(start_recall,
-			      AGS_TYPE_RECORD_MIDI_AUDIO_RUN);
+				AGS_TYPE_RECORD_MIDI_AUDIO_RUN);
 
   if(recall != NULL){
     recall_record_midi_audio_run = AGS_RECORD_MIDI_AUDIO_RUN(recall->data);
@@ -1150,6 +1167,8 @@ ags_dssi_bridge_map_recall(AgsMachine *machine)
 		 NULL);
   }  
 
+  g_list_free(start_recall);
+  
   /* ags-play-notation */
   ags_recall_factory_create(audio,
 			    NULL, NULL,
@@ -1161,6 +1180,10 @@ ags_dssi_bridge_map_recall(AgsMachine *machine)
 			     AGS_RECALL_FACTORY_RECALL),
 			    0);
 
+  g_object_get(audio,
+	       "recall", &start_recall,
+	       NULL);
+  
   recall = ags_recall_find_type(start_recall,
 				AGS_TYPE_PLAY_NOTATION_AUDIO_RUN);
 
@@ -1178,6 +1201,8 @@ ags_dssi_bridge_map_recall(AgsMachine *machine)
 		 NULL);
   }
 
+  g_list_free(start_recall);
+  
   /* depending on destination */
   ags_dssi_bridge_input_map_recall(dssi_bridge,
 				   0,
@@ -1193,9 +1218,6 @@ ags_dssi_bridge_map_recall(AgsMachine *machine)
   ags_dssi_bridge_output_map_recall(dssi_bridge,
 				    0,
 				    0);
-
-  g_list_free(start_play);
-  g_list_free(start_recall);
   
   /* call parent */
   AGS_MACHINE_CLASS(ags_dssi_bridge_parent_class)->map_recall(machine);
