@@ -1191,10 +1191,6 @@ ags_live_lv2_bridge_map_recall(AgsMachine *machine)
   live_lv2_bridge = (AgsLiveLv2Bridge *) machine;
 
   audio = machine->audio;
-  g_object_get(audio,
-	       "play", &start_play,
-	       "recall", &start_recall,
-	       NULL);
 
   /* ags-delay */
   ags_recall_factory_create(audio,
@@ -1208,6 +1204,10 @@ ags_live_lv2_bridge_map_recall(AgsMachine *machine)
 			     AGS_RECALL_FACTORY_RECALL),
 			    0);
 
+  g_object_get(audio,
+	       "play", &start_play,
+	       NULL);
+
   play = ags_recall_find_type(start_play,
 			      AGS_TYPE_DELAY_AUDIO_RUN);
 
@@ -1218,6 +1218,8 @@ ags_live_lv2_bridge_map_recall(AgsMachine *machine)
     play_delay_audio_run = NULL;
   }
 
+  g_list_free(start_play);
+  
   /* ags-count-beats */
   ags_recall_factory_create(audio,
 			    NULL, NULL,
@@ -1230,6 +1232,10 @@ ags_live_lv2_bridge_map_recall(AgsMachine *machine)
 			     AGS_RECALL_FACTORY_RECALL),
 			    0);
   
+  g_object_get(audio,
+	       "play", &start_play,
+	       NULL);
+
   play = ags_recall_find_type(start_play,
 			      AGS_TYPE_COUNT_BEATS_AUDIO_RUN);
 
@@ -1247,6 +1253,8 @@ ags_live_lv2_bridge_map_recall(AgsMachine *machine)
     play_count_beats_audio_run = NULL;
   }
 
+  g_list_free(start_play);
+  
   /* ags-record-midi */
   ags_recall_factory_create(audio,
 			    NULL, NULL,
@@ -1257,6 +1265,10 @@ ags_live_lv2_bridge_map_recall(AgsMachine *machine)
 			     AGS_RECALL_FACTORY_ADD |
 			     AGS_RECALL_FACTORY_RECALL),
 			    0);
+
+  g_object_get(audio,
+	       "recall", &start_recall,
+	       NULL);
 
   recall = ags_recall_find_type(start_recall,
 				AGS_TYPE_RECORD_MIDI_AUDIO_RUN);
@@ -1275,6 +1287,8 @@ ags_live_lv2_bridge_map_recall(AgsMachine *machine)
 		 NULL);
   }  
 
+  g_list_free(start_recall);
+  
   /* ags-play-lv2 */
   ags_recall_factory_create(audio,
 			    NULL, NULL,
@@ -1286,6 +1300,10 @@ ags_live_lv2_bridge_map_recall(AgsMachine *machine)
 			     AGS_RECALL_FACTORY_PLAY |
 			     AGS_RECALL_FACTORY_BULK),
 			    0);
+
+  g_object_get(audio,
+	       "play", &start_play,
+	       NULL);
 
   play = ags_recall_find_type(start_play,
 			      AGS_TYPE_PLAY_LV2_AUDIO);
@@ -1319,6 +1337,8 @@ ags_live_lv2_bridge_map_recall(AgsMachine *machine)
 		 NULL);
   }
 
+  g_list_free(start_play);
+  
   /* depending on destination */
   ags_live_lv2_bridge_input_map_recall(live_lv2_bridge,
 				       0,
