@@ -1230,10 +1230,6 @@ ags_lv2_bridge_map_recall(AgsMachine *machine)
 
   audio = machine->audio;
 
-  g_object_get(audio,
-	       "play", &start_play,
-	       NULL);
-  
   /* ags-delay */
   if((AGS_MACHINE_IS_SYNTHESIZER & (machine->flags)) != 0){
     ags_recall_factory_create(audio,
@@ -1247,6 +1243,10 @@ ags_lv2_bridge_map_recall(AgsMachine *machine)
 			       AGS_RECALL_FACTORY_RECALL),
 			      0);
 
+    g_object_get(audio,
+		 "play", &start_play,
+		 NULL);
+  
     play = ags_recall_find_type(start_play,
 				AGS_TYPE_DELAY_AUDIO_RUN);
 
@@ -1256,6 +1256,8 @@ ags_lv2_bridge_map_recall(AgsMachine *machine)
     }else{
       play_delay_audio_run = NULL;
     }
+
+    g_list_free(start_play);
     
     /* ags-count-beats */
     ags_recall_factory_create(audio,
@@ -1269,6 +1271,10 @@ ags_lv2_bridge_map_recall(AgsMachine *machine)
 			       AGS_RECALL_FACTORY_RECALL),
 			      0);
   
+    g_object_get(audio,
+		 "play", &start_play,
+		 NULL);
+
     play = ags_recall_find_type(start_play,
 				AGS_TYPE_COUNT_BEATS_AUDIO_RUN);
 
@@ -1286,6 +1292,8 @@ ags_lv2_bridge_map_recall(AgsMachine *machine)
       play_count_beats_audio_run = NULL;
     }
 
+    g_list_free(start_play);
+
     /* ags-record-midi */
     ags_recall_factory_create(audio,
 			      NULL, NULL,
@@ -1296,6 +1304,10 @@ ags_lv2_bridge_map_recall(AgsMachine *machine)
 			       AGS_RECALL_FACTORY_ADD |
 			       AGS_RECALL_FACTORY_RECALL),
 			      0);
+
+    g_object_get(audio,
+		 "recall", &start_recall,
+		 NULL);
 
     recall = ags_recall_find_type(start_recall,
 				  AGS_TYPE_RECORD_MIDI_AUDIO_RUN);
@@ -1314,6 +1326,8 @@ ags_lv2_bridge_map_recall(AgsMachine *machine)
 		   NULL);
     }  
 
+    g_list_free(start_recall);
+
     /* ags-route-lv2 */
     ags_recall_factory_create(audio,
 			      NULL, NULL,
@@ -1325,6 +1339,10 @@ ags_lv2_bridge_map_recall(AgsMachine *machine)
 			       AGS_RECALL_FACTORY_RECALL),
 			      0);
     
+    g_object_get(audio,
+		 "recall", &start_recall,
+		 NULL);
+
     recall = ags_recall_find_type(start_recall,
 				  AGS_TYPE_ROUTE_LV2_AUDIO_RUN);
 
@@ -1344,6 +1362,8 @@ ags_lv2_bridge_map_recall(AgsMachine *machine)
       recall_route_lv2_audio_run = NULL;
     }
 
+    g_list_free(start_recall);
+
     /* ags-play-notation */
     ags_recall_factory_create(audio,
 			      NULL, NULL,
@@ -1355,6 +1375,10 @@ ags_lv2_bridge_map_recall(AgsMachine *machine)
 			       AGS_RECALL_FACTORY_RECALL),
 			      0);
     
+    g_object_get(audio,
+		 "recall", &start_recall,
+		 NULL);
+
     recall = ags_recall_find_type(start_recall,
 				  AGS_TYPE_PLAY_NOTATION_AUDIO_RUN);
 
@@ -1371,11 +1395,10 @@ ags_lv2_bridge_map_recall(AgsMachine *machine)
 		   "count-beats-audio-run", play_count_beats_audio_run,
 		   NULL);
     }
+    
+    g_list_free(start_recall);
   }
 
-  g_list_free(start_play);
-  g_list_free(start_recall);
-  
   /* depending on destination */
   ags_lv2_bridge_input_map_recall(lv2_bridge,
 				  0,
