@@ -1,3 +1,8 @@
+ags (2.0.3)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed wrong recall access in AgsDssiBridge, AgsLv2Bridge, AgsLiveDssiBridge and AgsLiveLv2Bridge
+
 ags (2.0.2)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
